scrollbar fixes

--- a/src/style.css
+++ b/src/style.css
@@ -180,3 +180,44 @@ video {
 .clear {
   clear: both;
 }
+
+
+/* Hide scrollbar for the entire body when modal is open */
+body.modal-open {
+  overflow: hidden;
+}
+
+/* Show scrollbar for the modal content only */
+.dialog-content {
+  overflow-y: auto;
+  max-height: calc(100vh - 40px);
+  /* Adjust the value as needed */
+}
+
+/* Adjust the padding for the modal content */
+.dialog-content-padding {
+  padding: 20px;
+}
+
+/* .modal {
+  height: 100%;
+  width: 100%;
+  border: 1px solid green;
+  overflow: hidden;
+}
+
+#modal-content {
+  width: 100%;
+  height: 99%;
+  border: 1px solid blue;
+  overflow: auto;
+  padding-right: 15px;
+
+}
+
+html,
+body {
+  height: 99%;
+  border: 1px solid red;
+  overflow: hidden;
+} */
